Feat: index, cart, items
Index, Cart and Item Routes creation

Cart and Index pages styles

Cart Controller
> ember g controller cart
- subTotal, tax, total getters

Fix: changed Fontawesome CDN

--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-      integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
-      crossorigin="anonymous"
-    />
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
     <link
       integrity=""
@@ -27,6 +21,13 @@
       href="{{rootURL}}assets/shopping-cart.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     {{content-for "head-footer"}}
   </head>
   <body>
